--- a/package.json
+++ b/package.json
@@ -1,30 +1,33 @@
 {
     "name": "@remitano-anhdt/kyc-sdk",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "description": "Typescript SDK to interact with Kyc program.",
-    "main": "src/index.ts",
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
     "repository": {
-      "type": "git",
-      "url": "git+https://github.com/anhdt2365/kyc-sdk"
+        "type": "git",
+        "url": "git+https://github.com/anhdt2365/kyc-sdk"
     },
     "keywords": [
-      "kyc-sdk"
+        "kyc-sdk"
     ],
     "author": "anhdt@remitano.com",
     "license": "ISC",
     "bugs": {
-      "url": "https://github.com/renec-chain/kyc-sdk/issues"
+        "url": "https://github.com/renec-chain/kyc-sdk/issues"
     },
     "homepage": "https://github.com/renec-chain/kyc-sdk#readme",
     "scripts": {
-      "test": "export TS_JEST_DISABLE_VER_CHECKER=true && export JEST_JUNIT_OUTPUT_DIR=reports && npx jest --verbose --coverage --coverageProvider=v8 --collectCoverage=true --runInBand --reporters=default --reporters=jest-junit"
+        "build": "tsc -p src",
+        "prepublishOnly": "yarn build",
+        "test": "export TS_JEST_DISABLE_VER_CHECKER=true && export JEST_JUNIT_OUTPUT_DIR=reports && npx jest --verbose --coverage --coverageProvider=v8 --collectCoverage=true --runInBand --reporters=default --reporters=jest-junit"
     },
     "lint-staged": {
-      "*.{ts,md}": "yarn run prettier-format"
+        "*.{ts,md}": "yarn run prettier-format"
     },
     "dependencies": {
-      "@orca-so/common-sdk": "0.1.9",
-      "@project-serum/anchor": "0.26.0",
-      "tiny-invariant": "^1.3.1"
+        "@orca-so/common-sdk": "0.1.9",
+        "@project-serum/anchor": "0.26.0",
+        "tiny-invariant": "^1.3.1"
     }
-  }
+}
