--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@remitano-anhdt/kyc-sdk",
-    "version": "0.0.4",
+    "version": "0.0.5",
     "description": "Typescript SDK to interact with Kyc program.",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
@@ -28,6 +28,7 @@
     "dependencies": {
         "@orca-so/common-sdk": "0.1.9",
         "@project-serum/anchor": "0.26.0",
+        "spl-token": "npm:@solana/spl-token@0.2.0",
         "country-code-lookup": "^0.1.0",
         "tiny-invariant": "^1.3.1"
     }
